# SOSignal

./: .env  .env.example  README.md  docker-compose.yml
.github/workflows/: ci.yml
client/: Dockerfile  package-lock.json  package.json  typed-router.d.ts
client/src/: App.jsx
client/src/app/routes/: router.jsx
client/src/pages/LoginPage/: LoginPage.jsx  LoginPage.scss
client/src/pages/MainPage/: MainPage.jsx  MainPage.tsx  (+2 more)
client/src/router/: index.js
server/: alembic.ini  mypy.ini  pyproject.toml
server/src/: main.py
server/src/core/: database.py  settings.py
server/src/exceptions/: auth_exceptions.py  order_exceptions.py  stuff_exceptions.py  user_excptions.py
server/src/migrations/: env.py
server/src/migrations/versions/: 11ddc18f92e9_init_stuff_model.py  13752fac45d2_init_user_model.py  2acbb5a3dad7_create_admin_model.py  380b2396c83b_reload_models.py  3b8aa1ceef4b_add_group_and_order_models.py  6aa2b0fb6a10_reload_models.py  beba960be10b_order_date_not_unique.py
server/src/models/: __init__.py  admin.py  admin_model.py  group_model.py  order_model.py  stuff_model.py  user_model.py
server/src/modules/: __init__.py
server/src/repositories/: group_repository.py  order_repository.py  stuff_repository.py  user_repository.py
server/src/routers/: auth_router.py  order_router.py  user_router.py
server/src/schemas/: order_schemas.py  stuff_schemas.py  user_schemas.py
server/src/services/: auth_service.py  order_service.py  user_servise.py
server/src/utils/: auth.py
server/src/utils/admin/: admin_auth.py  auth.py  create_admin.py  views.py
(+2 files in other folders)
