[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "SamuraiJeka",email = "offissit123321@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqladmin (>=0.20.1,<0.21.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
mypy = "^1.15.0"

[tool.poetry]
package-mode = false
